[package]
name = "test_tui_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
crossterm = { version = "0.26.1", features = ["serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
tui = { version = "0.19.0", default-features = false, features = ["crossterm", "serde"] }
